# batonics-challenge

./: .dockerignore  BENCHMARKING.md  Cargo.toml  README.md  benchmark.sh  docker-compose.yml  final_snapshot.json  mbpsample (3).json  rust-toolchain.toml.bak  snapshots.ndjson
.cargo/: config.toml
docker/: Dockerfile
src/: book.rs  lib.rs  main.rs  metrics.rs  parser.rs  wire.rs
tests/: golden_smoke.rs  property.proptest-regressions  property.rs
